# watchdog

./: .gitignore  .gitmodules  CMakeLists.txt  config.json  config_template.json
include/: checkargs.h  config.h  fileutil.h  system.h  watcher.h
src/: checkargs.cc  config.cc  fileutil.cc  main.cc  notify.py  system.cc  watcher.cc
